# gato

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  setup.cfg  test.json
.github/workflows/: build-exe.yml  integration.yaml  integration_fork.yml  integration_sh.yaml  pytest.yaml
gato/: main.py  pyvenv.cfg
gato/artifact_secrets_scanner/: artifact_files.py  noseyparker.py
gato/attack/: __init__.py  attack.py  cicd_attack.py
gato/cli/: __init__.py  cli.py  colors.py  output.py
gato/enumerate/: __init__.py  enumerate.py  organization.py  recommender.py  repository.py
gato/git/: __init__.py  git.py  utils.py
gato/github/: __init__.py  api.py  gql_queries.py  search.py
gato/models/: __init__.py  execution.py  npfinding.py  organization.py  repository.py  runner.py  secret.py  variable.py
gato/search/: __init__.py  search.py
gato/util/: __init__.py  arg_utils.py
gato/workflow_parser/: __init__.py  circleci_parser.py  workflow_parser.py
integration/: creds.json  runner_helper.py  test_cases.json  test_enumeration.py
test/: integration_utils.py  test_api.py  test_cases.json  test_cli.py  test_enumerate.py  test_enumeration.py  test_help.py
test/files/: main.yaml  readme.md  test_repos_bad.txt  test_repos_good.txt
unit_test/: test_api.py  test_artifact_scanner.py  test_attack.py  test_cicd_attack.py  test_cli.py  test_enumerate.py  test_git.py  test_main.py  test_noseyparker.py  test_np_finding.py  test_org_enumerate.py  test_recommender.py  test_repo_enumerate.py  test_search.py  test_workflow_parser.py  utils.py
(+4 files in other folders)
